<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/refreshLayout"
             tools:context="com.netlab.vc.coursehelper.ForumPageFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:id="@+id/forum_listview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

        </ListView>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:paddingTop="5dip"
                      android:paddingBottom="8dip"
                      android:layout_below="@id/forum_listview"
                      android:id="@+id/footer_layout"
                      android:visibility="gone">

            <TextView
                android:id="@+id/loadFull"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/load_full"
                android:visibility="gone" />

            <TextView
                android:id="@+id/noData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/no_data"
                android:visibility="gone" />

            <TextView
                android:id="@+id/more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/more" />

            <ProgressBar
                android:id="@+id/loading"
                style="@style/customProgressBar" />

        </LinearLayout>
    </RelativeLayout>

</android.support.v4.widget.SwipeRefreshLayout>
